@@ -1,3 +1,6 @@
+2014-05-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amtape.pl: Add relabeled case.
+
 2014-05-12  Jean-Louis Martineau <martineau@zmanda.com>
 	* packaging/rpm/amanda.spec.src: Add amazon.
 
